--- a/gamebuild/WebAssets/style.css
+++ b/gamebuild/WebAssets/style.css
@@ -7,13 +7,13 @@
 
   body {
       background: var(--custom-gray);
+      overflow-x: hidden;
   }
   
   :root {
     --helvetica-font: "Helvetica", sans-serif;
-    --dosis-font: "Dosis", sans-serif;
     --saviors-orange: #e07d41;
-    --custom-gray: #2b2a33;
+    --custom-gray: #0e0e11;
   }
   
   main {
@@ -29,14 +29,14 @@
   }
   
   p {
-    font-family: var(--dosis-font);
+    font-family: var(--helvetica-font);
     color: white;
   }
   
   label {
     width: 100%;
   }
-  
+
   /* MENU */
   .burger {
     width: 60px;
@@ -55,7 +55,7 @@
   .line-3 {
     width: 100%;
     height: 1px;
-    background-color: white;
+    background-color: var(--saviors-orange);
     margin-bottom: 6px;
     transition: 0.4s;
     opacity: 1;
@@ -99,15 +99,14 @@
   }
   
   .menu-links a {
-    font-size: 30px;
-    font-family: var(--dosis-font);
-    text-transform: uppercase;
+    font-size: 20px;
+    font-family: var(--helvetica-font);
     text-decoration: none;
     text-align: center;
     margin: 10px 0;
-    letter-spacing: 0.1em;
-    font-weight: 200;
-    color: white;
+    letter-spacing: 0.01em;
+    font-weight: 400;
+    color: var(--saviors-orange);
   }
   
   .menu-socials-mobile a {
@@ -123,30 +122,175 @@
   /* HERO STYLING */
 .hero {
   height: 100vh;
-  background-color: #13243c;
-  overflow: hidden;
 }
 
-.hero-content {
-  position: absolute;
+.hero h2 {
+  font-weight: 400;
+  font-size: 20px;
+  letter-spacing: 0.04em;
+  color: var(--saviors-orange);
+  position: fixed;
+  padding: 6px 8px 8px;
+  z-index: 1000;
+  /* background-color: var(--custom-gray); */
+} 
+
+.om-oss h2, .donate h2 {
+  font-weight: 400;
+  font-size: 24px;
+  letter-spacing: 0.04em;
+  color: var(--saviors-orange);
+  padding: 50px 8px 0;
+  text-align: center;
+}
+
+.volunteer h2 {
+  font-weight: 400;
+  font-size: 24px;
+  letter-spacing: 0.04em;
+  color: var(--saviors-orange);
+  padding: 70px 8px 0;
+  text-align: center;
+}
+
+.line-wrapper div {
+  margin-top: 0px;
+  margin: 1px;
+  width: 26px;
+  height: 1px;
+  background-color: white;
+}
+
+.hero-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin: 14px;
+}
+
+.hero-bottom p {
+  font-size: 22px;
+  font-weight: 300;
+  letter-spacing: 0.2em;
+  line-height: 1em;
+  opacity: 0.8;
+}
+
+.hero-bottom div {
+  margin-bottom: -4px;
+}
+
+.hero-bottom p:last-child {
+  transform: rotate(-90deg);
+  letter-spacing: 0.7em;
+  opacity: 0.6;
+  width: 22px;
+  margin-left: 8px;
+}
+
+.om-oss, .donate {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgb(255, 247, 244);
+  padding-bottom: 20px;
+  padding-top: 30px;
+}
+
+.donate p {
+  color: black;
+  margin-top: 32px;
   width: 100%;
-  height: 100vh;
+  padding: 0 24px 36px;
+  max-width: 660px;
+  text-align: center;
+  line-height: 24px;
+}
+
+button {
+  background-color: var(--saviors-orange);
+  color: white;
+  border: none;
+  font-size: 20px;
+  width: 180px;
+  letter-spacing: 0.04em;
+  border-radius: 2px;
+  height: 40px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  margin-bottom: 60px;
+}
+
+.volunteer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: var(--custom-gray);
+  padding-bottom: 20px;
+  padding-top: 30px;
+}
+
+.volunteer p {
+  color: white;
+  margin-top: 32px;
+  width: 100%;
+  letter-spacing: 0.02em;
+  padding: 0 24px 36px;
+  max-width: 660px;
+  text-align: center;
+  line-height: 24px;
+}
+
+.small-card-container { /* height is auto by default */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 40px 0 8px;
+  width: 86%;
+  max-width: 1400px;
 }
 
-.hero-title {
-  margin: 0px 0px;
+.small-card-wrapper {
+  width: 100%;
+  background-color: white;
+  height: 600px;
+  margin-bottom: 14px;
+  border-radius: 2px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
 }
 
-.hero-title h2 {
-  margin: 0px 30px;
-  font-weight: 300;
-  font-size: 22px;
-  letter-spacing: 0.1em;
-  opacity: 0.8;
+.small-card-wrapper img {
+  width: 100%;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
 }
+
+.small-card-wrapper p:nth-child(2) {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 16px;
+  color: var(--saviors-orange);
+}
+
+.small-card-wrapper p:nth-child(3) {
+  text-align: center;
+  padding: 12px;
+  font-size: 14px;
+  line-height: 20px;
+  color: black;
+  height: 100000px; /* liFehack B) to get the text to bottom */
+}
+.small-card-wrapper p:nth-child(4){
+  font-size: 12px;
+  text-align: right;
+  padding: 10px 20px;
+  color: black;
+}
+
 
   @keyframes arrow {
     0% {
@@ -179,7 +323,7 @@
   
 
   /* HERO DESKTOP */
-@media (min-width: 1350px) {
+@media (min-width: 1150px) {
     .hero img {
       height: 100vh;
     }
@@ -234,7 +378,7 @@
     .menu-links a {
       font-size: 16px;
       margin: 0 20px;
-      letter-spacing: 0.2em;
+      letter-spacing: 0.04em;
     }
   
     .menu-socials-mobile a {
@@ -255,7 +399,16 @@
     .menu-bar-visible {
       transform: translateY(0vh);
       transition-delay: 0s;
-      box-shadow: 0 0 3px rgba(255, 255, 255, 0.3);
+      box-shadow: 0 0 3px rgba(255, 255, 255, 0.2);
     }
   }
+
+  @media (min-width: 500px) {
+    .small-card-container { /* height is auto by default */
+      flex-direction: row;
+    }
   
+    .small-card-wrapper {
+      width: 32%;
+    }
+  }
